implementación de nav e inicio

--- a/index.html
+++ b/index.html
@@ -23,8 +23,73 @@
       integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
       crossorigin="anonymous"
     ></script>
-    <header></header>
-    <main></main>
+    <header>
+      <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
+        <div class="container-fluid">
+          <a class="navbar-brand" href="#">
+            <img src="assets/img/logo.png" class="img-logo-phone" />
+          </a>
+          <button
+            class="navbar-toggler"
+            type="button"
+            data-bs-toggle="collapse"
+            data-bs-target="#navbarNav"
+            aria-controls="navbarNav"
+            aria-expanded="false"
+            aria-label="Toggle navigation"
+          >
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav ms-auto mb-2 mb-lg-0 fs-5">
+              <li class="nav-item">
+                <a class="nav-link" href="#">Inicio</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#educacion">Educación</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#experiencia">Experiencia</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#portafolio">Portafolio</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#contacto">Contacto</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </nav>
+    </header>
+    <main>
+      <section id="Home-Section" class="text-light py-lg-5 mt-5">
+        <div class="container">
+          <div class="row">
+            <div class="col-md-6">
+              <h1 class="display-1 fw-bold my-5">
+                Currículum <br />
+                Vitae
+              </h1>
+              <p class="py-lg-5">
+                Licenciado en ciencias, ingeniero en informática y Analista
+                programador, con capacidad de trabajo en equipo, organizado,
+                autodidacta, metódico y capaz de desempeñarse en sus labores de
+                manera eficiente, incluso bajo presión. Con conocimientos en el
+                área de front-end y back-end.
+              </p>
+            </div>
+            <div class="col-md-6 cont-img-profile my-5">
+              <img
+                src="assets/img/imgProfile.jpeg"
+                alt="Imágen de perfil"
+                class="img-profile"
+              />
+            </div>
+          </div>
+        </div>
+      </section>
+    </main>
     <footer></footer>
   </body>
 </html>
