--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
       </nav>
     </header>
     <main>
-      <section id="Home-Section" class="text-light py-lg-5 mt-5">
+      <section id="homeSection" class="text-light py-lg-5 mt-5">
         <div class="container">
           <div class="row">
             <div class="col-md-6">
@@ -86,6 +86,23 @@
                 class="img-profile"
               />
             </div>
+          </div>
+        </div>
+      </section>
+      <section id="educacion" class="bg-secondary p-4">
+        <div class="container">
+          <h2 class="text-center m-0 roboto-medium">Educación</h2>
+          <div class="box roboto-medium text-body mt-3">
+            <h3 class="text-h3-education">2017 - 2020 Instituto Profesional AIEP</h3>
+            <p>Analista de Sistemas y Programador</p>
+          </div>
+          <div class="box roboto-medium text-body">
+            <h3 class="text-h3-education">2020 - 2023 Universidad Mayor</h3>
+            <p>Ingeniero en Informática y Licenciado en Ciencias</p>
+          </div>
+          <div class="box roboto-medium text-body">
+            <h3 class="text-h3-education">2024 - 2025 Academia Desafío Latam</h3>
+            <p>Desarrollador Full Stack JavaScript</p>
           </div>
         </div>
       </section>
