--- a/index.html
+++ b/index.html
@@ -107,6 +107,10 @@
         </div>
       </section>
     </main>
-    <footer></footer>
+    <footer class="bg-dark text-center text-light p-4">
+      <p class="mb-0">
+        Nicolás San Martín Lorca 2024. Todos los derechos reservados.
+      </p>
+    </footer>
   </body>
 </html>
