implementación sección experiencia y fix sección educación

--- a/index.html
+++ b/index.html
@@ -90,10 +90,12 @@
         </div>
       </section>
       <section id="educacion" class="bg-secondary p-4">
-        <div class="container">
-          <h2 class="text-center m-0 roboto-medium">Educación</h2>
+        <div class="container mt-4 mb-5">
+          <h2 class="display-3 fw-bold my-4 text-center">Educación</h2>
           <div class="box roboto-medium text-body mt-3">
-            <h3 class="text-h3-education">2017 - 2020 Instituto Profesional AIEP</h3>
+            <h3 class="text-h3-education">
+              2017 - 2020 Instituto Profesional AIEP
+            </h3>
             <p>Analista de Sistemas y Programador</p>
           </div>
           <div class="box roboto-medium text-body">
@@ -101,8 +103,39 @@
             <p>Ingeniero en Informática y Licenciado en Ciencias</p>
           </div>
           <div class="box roboto-medium text-body">
-            <h3 class="text-h3-education">2024 - 2025 Academia Desafío Latam</h3>
+            <h3 class="text-h3-education">
+              2024 - 2025 Academia Desafío Latam
+            </h3>
             <p>Desarrollador Full Stack JavaScript</p>
+          </div>
+        </div>
+      </section>
+      <section id="experiencia" class="container text-center my-5">
+        <h2 class="display-3 fw-bold my-4">Experiencia Profesional</h2>
+        <div class="row">
+          <div class="col-12 col-md-6">
+            <i class="fas fa-solid fa-laptop fa-3x my-3"></i>
+            <h3 class="mt-3 fw-bold">Programador</h3>
+            <h4 class="fs-6">Diciembre 2020 - Julio 2021</h4>
+            <p class="my-3">
+              Tareas de progamador realizada en la editorial Santillana Chile en
+              el área de informática. Desempeño y utilización en la herramienta
+              de “Maker Learning” (HTML5), con un conjunto de diversas tares en
+              lo que es la programación y diseños web. Además, con funciones en
+              lo que es la diagramación y digitalización de texto educacionales.
+            </p>
+          </div>
+          <div class="col-12 col-md-6">
+            <i class="fas fa-solid fa-laptop fa-3x my-3"></i>
+            <h3 class="mt-3 fw-bold">Junior Systems Engineer</h3>
+            <h4 class="fs-6">Agosto 2021 - Febrero 2024</h4>
+            <h3 class="mt-3 fw-bold">Systems Engineer</h3>
+            <h4 class="fs-6">Febrero 2024 - Actualidad</h4>
+            <p class="my-3">
+              Tareas en la empresa Indra Sistemas S.A, desempeñando labores como
+              desarrollador Full-Stack. Con manejo en los lenguajes: JSP, Java
+              EE, en arquitectura Spring, SpringBoot y Angular.
+            </p>
           </div>
         </div>
       </section>
