--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta content="width=device-width, initial-scale=1.0" name="viewport" />
-    <title>Portafolio de Nicolás San Martín</title>
+    <title>CV de Nicolás San Martín</title>
     <link href="assets/favicon/iconMain.png" rel="icon" type="image/png" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
@@ -27,7 +27,11 @@
       <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
         <div class="container-fluid">
           <a class="navbar-brand" href="#">
-            <img src="assets/img/logo.png" class="img-logo-phone" />
+            <img
+              alt="logo de nav"
+              src="assets/img/logo.png"
+              class="img-logo-phone"
+            />
           </a>
           <button
             class="navbar-toggler"
@@ -136,6 +140,17 @@
               desarrollador Full-Stack. Con manejo en los lenguajes: JSP, Java
               EE, en arquitectura Spring, SpringBoot y Angular.
             </p>
+          </div>
+        </div>
+      </section>
+      <section id="portafolio" class="text-center py-lg-5 mt-5">
+        <div class="container">
+          <div class="row">
+            <div class="col-md-12">
+              <a href="portafolio.html" class="text-light">
+                <h2 class="display-3 fw-bold my-4">Portafolio</h2>
+              </a>
+            </div>
           </div>
         </div>
       </section>
