--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
         <div class="container">
           <div class="row">
             <div class="col-md-12">
-              <a href="portafolio.html" class="text-light">
+              <a href="portafolio.html" class="text-black">
                 <h2 class="display-3 fw-bold my-4">Portafolio</h2>
               </a>
             </div>
