--- a/portafolio.html
+++ b/portafolio.html
@@ -26,7 +26,7 @@
     <header>
       <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
         <div class="container-fluid">
-          <a class="navbar-brand" href="#">
+          <a class="navbar-brand" href="index.html">
             <img
               alt="logo de nav"
               src="assets/img/logo.png"
