implementación y desarrollo sección contacto

--- a/index.html
+++ b/index.html
@@ -147,10 +147,43 @@
         <div class="container">
           <div class="row">
             <div class="col-md-12">
-              <a href="portafolio.html" class="text-black">
+              <a href="portafolio.html" class="color-text-title">
                 <h2 class="display-3 fw-bold my-4">Portafolio</h2>
               </a>
             </div>
+          </div>
+        </div>
+      </section>
+      <section id="contacto" class="bg-secondary p-4">
+        <div class="container mt-4 mb-5">
+          <h2 class="display-3 fw-bold my-4 text-center">Contacto</h2>
+          <div class="roboto-medium text-body">
+            <i class="fa-solid fa-envelope icon-contact"></i>
+            <h3 class="text-h3-education">nicolas.sm.lor@gmail.com</h3>
+          </div>
+          <div class="roboto-medium text-body">
+            <i class="fa-solid fa-phone icon-contact"></i>
+            <h3 class="text-h3-education">+569 71257484</h3>
+          </div>
+          <div class="roboto-medium text-body">
+            <i class="fa-solid fa-link icon-contact"></i>
+            <a
+              class="text-h3-education color-text-title"
+              href="https://www.linkedin.com/in/nicolas-san-mart%C3%ADn-lorca-2b3401198"
+              target="_blank"
+            >
+              linkedin.com/nicolas-san-martín-lorca
+            </a>
+          </div>
+          <div class="roboto-medium text-body">
+            <i class="fa-solid fa-link icon-contact"></i>
+            <a
+              class="text-h3-education color-text-title"
+              href="https://github.com/ncisanl/ncisanl.github.io"
+              target="_blank"
+            >
+              github.com/ncisanl.github.io
+            </a>
           </div>
         </div>
       </section>
