--- a/index.html
+++ b/index.html
@@ -4,14 +4,18 @@
     <meta charset="UTF-8" />
     <meta content="width=device-width, initial-scale=1.0" name="viewport" />
     <title>CV de Nicolás San Martín</title>
+    <!-- Favicon -->
     <link href="assets/favicon/iconMain.png" rel="icon" type="image/png" />
+    <!-- CDN Bootstrap -->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
       integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
       crossorigin="anonymous"
     />
+    <!-- Estilos de Nico -->
     <link href="assets/css/style.css" rel="stylesheet" />
+    <!-- Fontawesome -->
     <script
       src="https://kit.fontawesome.com/4351f36819.js"
       crossorigin="anonymous"
@@ -23,6 +27,7 @@
       integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
       crossorigin="anonymous"
     ></script>
+    <!-- Header -->
     <header>
       <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
         <div class="container-fluid">
@@ -56,7 +61,7 @@
                 <a class="nav-link" href="#experiencia">Experiencia</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#portafolio">Portafolio</a>
+                <a class="nav-link" href="#portfolio">Portafolio</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="#contacto">Contacto</a>
@@ -66,6 +71,7 @@
         </div>
       </nav>
     </header>
+    <!-- Main -->
     <main>
       <section id="homeSection" class="text-light py-lg-5 mt-5">
         <div class="container">
@@ -86,7 +92,7 @@
             <div class="col-md-6 cont-img-profile my-5">
               <img
                 src="assets/img/imgProfile.jpeg"
-                alt="Imágen de perfil"
+                alt="IMAGEN DEL PERFIL"
                 class="img-profile"
               />
             </div>
@@ -143,17 +149,18 @@
           </div>
         </div>
       </section>
-      <section id="portafolio" class="text-center py-lg-5 mt-5">
+      <section id="portfolio" class="text-center py-lg-5 mt-5">
         <div class="container">
           <div class="row">
             <div class="col-md-12">
-              <a href="portafolio.html" class="color-text-title">
-                <h2 class="display-3 fw-bold my-4">Portafolio</h2>
+              <a href="portfolio.html" class="color-text-title">
+                <h2 class="display-3 fw-bold my-4">portfolio</h2>
               </a>
             </div>
           </div>
         </div>
       </section>
+      <!-- Contacto -->
       <section id="contacto" class="bg-secondary p-4">
         <div class="container mt-4 mb-5">
           <h2 class="display-3 fw-bold my-4 text-center">Contacto</h2>
@@ -188,7 +195,8 @@
         </div>
       </section>
     </main>
-    <footer class="bg-dark text-center text-light p-4">
+    <!-- Footer -->
+    <footer class="bg-danger text-center text-light p-4">
       <p class="mb-0">
         Nicolás San Martín Lorca 2024. Todos los derechos reservados.
       </p>
