cambio datos de contacto

--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
       </section>
       <section id="contacto" class="bg-secondary p-4">
         <div class="container mt-4 mb-5">
-          <h2 class="display-3 fw-bold my-4 text-center">Contacto</h2>
+          <h2 class="display-3 fw-bold my-4 text-center">Datos de Contacto</h2>
           <div class="roboto-medium text-body">
             <i class="fa-solid fa-envelope icon-contact"></i>
             <h3 class="text-h3-education">nicolas.sm.lor@gmail.com</h3>
