--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -157,40 +157,40 @@
       <section id="contacto" class="bg-secondary p-4">
         <div class="container mt-4 mb-5">
           <h2 class="display-3 fw-bold my-4 text-center">Contacto</h2>
-          <div class="roboto-medium text-body">
-            <i class="fa-solid fa-envelope icon-contact"></i>
-            <h3 class="text-h3-education">nicolas.sm.lor@gmail.com</h3>
-          </div>
-          <div class="roboto-medium text-body">
-            <i class="fa-solid fa-phone icon-contact"></i>
-            <h3 class="text-h3-education">+569 71257484</h3>
-          </div>
-          <div class="roboto-medium text-body">
-            <i class="fa-solid fa-link icon-contact"></i>
-            <a
-              class="text-h3-education color-text-title"
-              href="https://www.linkedin.com/in/nicolas-san-mart%C3%ADn-lorca-2b3401198"
-              target="_blank"
-            >
-              linkedin.com/nicolas-san-martín-lorca
-            </a>
-          </div>
-          <div class="roboto-medium text-body">
-            <i class="fa-solid fa-link icon-contact"></i>
-            <a
-              class="text-h3-education color-text-title"
-              href="https://github.com/ncisanl/ncisanl.github.io"
-              target="_blank"
-            >
-              github.com/ncisanl.github.io
-            </a>
+          <div class="contact-info">
+            <div class="contact-item">
+              <i class="fa-solid fa-envelope icon-contact"></i>
+              <h3 class="text-h3-education">nicolas.sm.lor@gmail.com</h3>
+            </div>
+            <div class="contact-item">
+              <i class="fa-solid fa-phone icon-contact"></i>
+              <h3 class="text-h3-education">+569 71257484</h3>
+            </div>
+            <div class="contact-item">
+              <i class="fa-brands fa-linkedin-in icon-contact"></i>
+              <a
+                class="text-h3-education color-text-title"
+                href="https://www.linkedin.com/in/nicolas-san-mart%C3%ADn-lorca-2b3401198"
+                target="_blank"
+                >linkedin.com/nicolas-san-martín-lorca</a
+              >
+            </div>
+            <div class="contact-item">
+              <i class="fa-brands fa-github icon-contact"></i>
+              <a
+                class="text-h3-education color-text-title"
+                href="https://github.com/ncisanl/ncisanl.github.io"
+                target="_blank"
+                >github.com/ncisanl.github.io</a
+              >
+            </div>
           </div>
         </div>
       </section>
     </main>
     <footer class="bg-dark text-center text-light p-4">
       <p class="mb-0">
-        Nicolás San Martín Lorca 2024. Todos los derechos reservados.
+        Nicolás San Martín Lorca 2024. Copyright Todos los derechos reservados.
       </p>
     </footer>
   </body>
