Modificando la NavVar Add Icons

--- a/index.html
+++ b/index.html
@@ -47,19 +47,24 @@
           <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav ms-auto mb-2 mb-lg-0 fs-5">
               <li class="nav-item">
-                <a class="nav-link" href="#">Inicio</a>
+                <a class="nav-link" href="#">
+                  <i class="fa-solid fa-home"></i> Inicio</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#educacion">Educación</a>
+                <a class="nav-link" href="#educacion">
+                  <i class="fa-solid fa-book"></i> Educación</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#experiencia">Experiencia</a>
+                <a class="nav-link" href="#experiencia">
+                  <i class="fa-solid fa-laptop-code"></i> Experiencia</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#portafolio">Portafolio</a>
+                <a class="nav-link" href="#portafolio">
+                  <i class="fa-solid fa-briefcase"></i> Portafolio</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#contacto">Contacto</a>
+                <a class="nav-link" href="#contacto">
+                  <i class="fa-solid fa-user"></i> Contacto</a>
               </li>
             </ul>
           </div>
