--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -47,24 +47,19 @@
           <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav ms-auto mb-2 mb-lg-0 fs-5">
               <li class="nav-item">
-                <a class="nav-link" href="#">
-                  <i class="fa-solid fa-home"></i> Inicio</a>
+                <a class="nav-link" href="#"> Inicio</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#educacion">
-                  <i class="fa-solid fa-book"></i> Educación</a>
+                <a class="nav-link" href="#educacion"> Educación</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#experiencia">
-                  <i class="fa-solid fa-laptop-code"></i> Experiencia</a>
+                <a class="nav-link" href="#experiencia"> Experiencia</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#portafolio">
-                  <i class="fa-solid fa-briefcase"></i> Portafolio</a>
+                <a class="nav-link" href="#portafolio"> Portafolio</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#contacto">
-                  <i class="fa-solid fa-user"></i> Contacto</a>
+                <a class="nav-link" href="#contacto"> Contacto</a>
               </li>
             </ul>
           </div>
